--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,6 @@
     <title>Robbin Collins React Portfolio</title>
 </head>
 <body>
-  ,<div id ="root"></div>  
+  <div id ="root"></div>  
 </body>
 </html>
